--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="./assets/img/logo.png" alt=""> -->
-        <img src="././assets/img/Logo.jpg" alt="" data-aos="fade-in">
+        <img src="./assets/img/Logo.jpg" alt="" data-aos="fade-in">
       </a>
 
       <nav id="navmenu" class="navmenu">
