--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="./assets/img/logo.png" alt=""> -->
-        <img src="./assets/img/Logo.jpg" alt="" data-aos="fade-in">
+        <img src="././assets/img/Logo.jpg" alt="" data-aos="fade-in">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -111,7 +111,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper init-swiper">
+            <div class="portfolio-details-slider swiper init-swiper" style="height:600px; width:800px;">
 
               <script type="application/json" class="swiper-config">
                 {
@@ -129,22 +129,26 @@
                 }
               </script>
 
-              <div class="swiper-wrapper align-items-center">
+              <div class="swiper-wrapper">
 
                 <div class="swiper-slide">
-                  <img id="image1" src="./assets/img/portfolio/app-1.jpg" alt="">
+                  <img id="image1" src="./assets/img/portfolio/BAM.png" alt="" style="width:800px; height:600px;">
                 </div>
 
                 <div class="swiper-slide">
-                  <img id="image2" src="./assets/img/portfolio/product-1.jpg" alt="">
+                  <img id="image2" src="./assets/img/portfolio/xpomania.png" alt="" style="width:800px; height:600px;">
                 </div>
 
                 <div class="swiper-slide">
-                  <img id="image3" src="./assets/img/portfolio/branding-1.jpg" alt="">
+                  <img id="image3" src="./assets/img/portfolio/ttsh.png" alt="" style="width:800px; height:600px;">
                 </div>
 
                 <div class="swiper-slide">
-                  <img id="image4" src="./assets/img/portfolio/books-1.jpg" alt="">
+                  <img id="image4" src="./assets/img/portfolio/soundroom.png" alt="" style="width:800px; height:600px;">
+                </div>
+				
+				<div class="swiper-slide">
+                  <img id="image5" src="./assets/img/portfolio/kayak.png" alt="" style="width:800px; height:600px;">
                 </div>
 
               </div>
