--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -132,23 +132,23 @@
               <div class="swiper-wrapper">
 
                 <div class="swiper-slide">
-                  <img id="image1" src="./assets/img/portfolio/BAM.png" alt="" style="width:800px; height:600px;">
+                  <img id="image1" alt="" style="width:800px; height:600px;">
                 </div>
 
                 <div class="swiper-slide">
-                  <img id="image2" src="./assets/img/portfolio/xpomania.png" alt="" style="width:800px; height:600px;">
+                  <img id="image2" alt="" style="width:800px; height:600px;">
                 </div>
 
                 <div class="swiper-slide">
-                  <img id="image3" src="./assets/img/portfolio/ttsh.png" alt="" style="width:800px; height:600px;">
+                  <img id="image3" alt="" style="width:800px; height:600px;">
                 </div>
 
                 <div class="swiper-slide">
-                  <img id="image4" src="./assets/img/portfolio/soundroom.png" alt="" style="width:800px; height:600px;">
+                  <img id="image4" alt="" style="width:800px; height:600px;">
                 </div>
 				
 				<div class="swiper-slide">
-                  <img id="image5" src="./assets/img/portfolio/kayak.png" alt="" style="width:800px; height:600px;">
+                  <img id="image5" alt="" style="width:800px; height:600px;">
                 </div>
 
               </div>
