Add flona savior project

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
         <div><span>My</span> <span class="description-title">Portfolio</span></div>
-	<p class="mb-0">Here is my project collaborating in company</p>
+	<p class="mb-0">Here are list of projects I have contributed or collaborated on the company.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -304,6 +304,9 @@
               </li>
 			  <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" href="#project-tab-6">Jungle River Kayak VR</a>
+              </li>
+			  <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#project-tab-7">FloNa Savior</a>
               </li>
             </ul>
           </div>
@@ -446,6 +449,33 @@
 					<span class ="badge">HP Reverb G2</span>
 					<span class ="badge">Unreal Engine 5</span>
                     <p style="padding-top: 20px">Kayak adventure simulation game. Built using Unreal Engine 5.2 for desktop VR. Tested in HP Reverb G2 and Oculus Quest 2 and 3 using Meta Quest Link</p>
+                  </div>
+                  <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <!--<a href="./assets/img/kayak.png" target="_blank"><img src="./assets/img/kayak.png" alt="" class="img-fluid"></a>-->
+					
+					<section id="project" class="project section">
+						<div class="project-content h-100">
+							<img src="./assets/img/kayak.png" class="img-fluid" alt="">
+							<div class="project-info">
+								<a href="./assets/img/kayak.png" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+								<a href="portfolio-details.html?id=project6" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+							</div>
+						</div>
+					</section>
+					
+                  </div>
+                </div>
+              </div>
+			  <div class="tab-pane" id="project-tab-7">
+                <div class="row">
+                  <div class="col-lg-8 details order-2 order-lg-1">
+                    <h3>FloNa Savior</h3>
+					<span class ="badge">Augmented Reality</span>
+					<span class ="badge">Android</span>
+					<span class ="badge">Unity</span>
+					<span class ="badge">Vuforia</span>
+                    <p style="padding-top: 20px">Augmented Reality-based educational application about the conservation of endangered animals and plants. Built using Unity for Android mobile device. Project used as my thesis for bachelor degree.</p>
+					<p style="padding-top: 10px">itch.io link:<a href="https://rickyyo002.itch.io/flona-savior"></p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <!--<a href="./assets/img/kayak.png" target="_blank"><img src="./assets/img/kayak.png" alt="" class="img-fluid"></a>-->
