--- a/index.html
+++ b/index.html
@@ -482,10 +482,10 @@
 					
 					<section id="project" class="project section">
 						<div class="project-content h-100">
-							<img src="./assets/img/kayak.png" class="img-fluid" alt="">
+							<img src="./assets/img/flona.png" class="img-fluid" alt="">
 							<div class="project-info">
-								<a href="./assets/img/kayak.png" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-								<a href="portfolio-details.html?id=project6" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+								<a href="./assets/img/flona.png" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+								<a href="portfolio-details.html?id=project7" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
 							</div>
 						</div>
 					</section>
