--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 					<span class ="badge">Unity</span>
 					<span class ="badge">Vuforia</span>
                     <p style="padding-top: 20px">Augmented Reality-based educational application about the conservation of endangered animals and plants. Built using Unity for Android mobile device. Project used as my thesis for bachelor degree.</p>
-					<a href="https://rickyyo002.itch.io/flona-savior">itch.io link ></a>
+					<a href="https://rickyyo002.itch.io/flona-savior">itch.io ></a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <!--<a href="./assets/img/kayak.png" target="_blank"><img src="./assets/img/kayak.png" alt="" class="img-fluid"></a>-->
