--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
         <div><span>My</span> <span class="description-title">Portfolio</span></div>
-	<p class="mb-0">Here are list of projects I have contributed or collaborated on the company.</p>
+	<p class="mb-0">Here are list of projects I have contributed and collaborated on the company.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
